test_suite/alan-2022-examples/failing/003880_mutation.alan
source i begin integer if 4 then relax end m; relax end
